--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -3,7 +3,7 @@
        <div class="container">  
         <a class="navbar-brand" href="#">Dating App</a>
     
-          <ul class="navbar-nav me-auto" *ngIf="loggedIn">
+          <ul class="navbar-nav me-auto" *ngIf="accountService.currentUser$ | async">
             <li class="nav-item">
               <a class="nav-link" href="#">Matches</a>
             </li>
@@ -13,11 +13,9 @@
             <li class="nav-item">
               <a class="nav-link" href="#">Messages</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" (click)="logout()" href="#">LogOut</a>
-              </li>
+         
           </ul>
-          <div class="dropdown" *ngIf="loggedIn" dropdown>
+          <div class="dropdown" *ngIf="accountService.currentUser$ | async" dropdown>
               <a class="dropdown-toggle text-light" dropdownToggle >Welcome User</a>
               <div class="dropdown-menu mt-3" *dropdownMenu >
                   <a class="dropdown-item">Edit Profile</a>
@@ -25,7 +23,7 @@
                   <a class="dropdown-item" (click)="logout()">Logout</a>
               </div>
           </div>
-          <form *ngIf="!loggedIn" #loginForm="ngForm" class="form-inline mt-2 mt-md-0" (ngSubmit)="login()" autocomplete="off">
+          <form *ngIf="(accountService.currentUser$ | async)===null" #loginForm="ngForm" class="form-inline mt-2 mt-md-0" (ngSubmit)="login()" autocomplete="off">
               <input 
               name="username"
               [(ngModel)]="model.username"
