--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -6,6 +6,15 @@
         <input type="text" class="form-control" name="username" 
         [(ngModel)]="model.username" placeholder="username">
     </div>
+
+    <!-- <div class="form-group">
+       <label>Who is your favourite user?</label>
+       <select class="form-control">
+           <option *ngFor="let user of usersFromHomeComponent" [value]="user.userName">
+               {{user.userName}}
+           </option>
+       </select>
+    </div> -->
     <div>
         <input type="text" class="form-control" name="password" 
         [(ngModel)]="model.password" placeholder="password">
