Communication between components and registration page logic implementation

--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -14,7 +14,7 @@
 <div class="row justify-content-center">
  
      <div class="col-4">
-        <app-register></app-register>
+        <app-register (cancelRegister)="cancelRegistermode($event)"></app-register>
         <!-- <app-register [usersFromHomeComponent]="users" (cancelRegister)="cancelRegistermode($event)"></app-register> -->
     </div> 
 </div>
