--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -6,7 +6,7 @@
     </h1>
     <p class="lead">Come on in to view your matches ... all you need to do is SignUp!!</p>
     <div class="text-center">
-    <button (click)="registerToggle()" class="btn btn-primary btn-lg mr-3">Register</button>
+    <button (click)="registerToggle()" class="btn btn-dark btn-lg mr-3">Register</button>
     <button class="btn btn-info btn-lg">Learn More</button>
     </div>
     </div>
