--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -21,8 +21,8 @@
     </div>
 
     <div class="form-group text-center">
-        <button  class="btn btn-success mr-2" type="submit">Register</button>
+        <button  class="btn btn-dark mr-2" type="submit">Register</button>
     
-        <button  class="btn btn-success mr-2" (click)="cancel()" type="submit">Cancel</button>
+        <button  class="btn btn-info mr-2" (click)="cancel()" type="submit">Cancel</button>
     </div>
 </form>
