--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -21,8 +21,8 @@
             </li>
          
           </ul>
-          <div class="dropdown" *ngIf="(accountService.currentUser$ | async) as user" dropdown>
-              <a class="dropdown-toggle text-light" dropdownToggle >Welcome {{ model.username | titlecase}}</a>
+          <div class="dropdown" *ngIf="(accountService.currentUser$ | async) as user " dropdown>
+              <a class="dropdown-toggle text-light" dropdownToggle >Welcome {{ user.username }}</a>
               <div class="dropdown-menu mt-3" *dropdownMenu >
                   <a routerLink='/member/edit' class="dropdown-item">Edit Profile</a>
                   <div class="dropdown-devider"></div>
