--- a/client/src/app/members/member-edit/member-edit.component.html
+++ b/client/src/app/members/member-edit/member-edit.component.html
@@ -3,8 +3,8 @@
         <h1>Your Profile</h1>
     </div>
     <div class="col-8">
-        <div class="alert alert-info">
-            <p><strong>Information :</strong> You have made changes.Any unsaved changes will be lost</p>
+        <div class="alert alert-info" *ngIf="editForm.dirty">
+        <strong>Information :</strong> You have made changes.Any unsaved changes will be lost
         </div>
     </div>
     <div class="col-4">
@@ -33,7 +33,7 @@
             </div>
             <div class="card-footer">
   
-            <button class="btn btn-success btn-block">Save Changes</button>
+            <button [disabled]="!editForm.dirty" form="editForm" class="btn btn-success btn-block">Save Changes</button>
 
             </div>
             </div>
@@ -44,13 +44,13 @@
         <div class="col-8">
     <tabset class="member-tabset">
     <tab heading= 'About {{member.knownAs}}'>
-        <form>
+        <form #editForm="ngForm" id="editForm" (ngSubmit)="updateMember()" >
             <h4>Description</h4>
-            <textarea class="form-control" [(ngModel)]="member.introduction" name="Introductions" rows="6"></textarea>   
+            <textarea class="form-control" [(ngModel)]="member.introduction" name="introduction" rows="6"></textarea>   
             <h4 class="mt-2">Looking For</h4>
-            <textarea class="form-control" [(ngModel)]="member.lookingFor" name="Looking for" rows="6"></textarea>
+            <textarea class="form-control" [(ngModel)]="member.lookingFor" name="LookingFor" rows="6"></textarea>
             <h4 class="mt-2">Interest</h4>
-            <textarea class="form-control" [(ngModel)]="member.interests" name="Interest" rows="6"></textarea>
+            <textarea class="form-control" [(ngModel)]="member.interests" name="interests" rows="6"></textarea>
             
             <h4>Location Details:</h4>
             <div class="form-inline">
