--- a/client/src/app/members/member-edit/member-edit.component.html
+++ b/client/src/app/members/member-edit/member-edit.component.html
@@ -48,7 +48,7 @@
             <h4>Description</h4>
             <textarea class="form-control" [(ngModel)]="member.introduction" name="introduction" rows="6"></textarea>   
             <h4 class="mt-2">Looking For</h4>
-            <textarea class="form-control" [(ngModel)]="member.lookingFor" name="LookingFor" rows="6"></textarea>
+            <textarea class="form-control" [(ngModel)]="member.lookingFor" name="lookingFor" rows="6"></textarea>
             <h4 class="mt-2">Interest</h4>
             <textarea class="form-control" [(ngModel)]="member.interests" name="interests" rows="6"></textarea>
             
