--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,5 +1,7 @@
+<!-- <ngx-spinner bdColor = "rgba(0, 0, 0, 0.8)" size = "medium" color = "#fff" type = "ball-fall" [fullScreen] = "true"><p style="color: white" > Loading... </p></ngx-spinner> -->
+
 <ngx-spinner>
-    <h3>Loading..</h3>
+    <h3>Loading ...</h3>
 </ngx-spinner>
 <app-nav></app-nav>
 <div class="container" style="margin-top:100px">
