--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
  
        <div class="container">  
-        <a class="navbar-brand" routerLink='/' >Soul's finder</a>
+        <a class="navbar-brand" routerLink='/'>Match Finder</a>
     
           <ul class="navbar-nav me-auto" >
            
