--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -1,28 +1,60 @@
-<form #registerform="ngForm" (ngSubmit)="register()" autocomplete="off">
+<form [formGroup]= 'registerform'  (ngSubmit) ="register()" autocomplete="off">
 
     <h2 class="text-center text-primary">Sign Up</h2>
     <hr>
     <div class="form-group">
-        <input type="text" class="form-control" name="username" 
-        [(ngModel)]="model.username" placeholder="username">
+<label class="control-label" style="margin-right: 10px;" >I am a</label> 
+<label class="radio-inline" >
+    <input type="radio" value="male" formControlName='gender'>Male
+</label>
+<label class="radio-inline" >
+    <input type="radio" value="female" formControlName='gender' class="ml-3">Female
+</label>
     </div>
+      <app-text-input [formControl]='registerform.controls["username"]' [label]='"Username"'>
+      </app-text-input>
+      <app-text-input [formControl]='registerform.controls["password"]' [label]='"Password"' [type]='"password"' >
 
+    </app-text-input>
+    <app-text-input [formControl]='registerform.controls["confirmPassword"]' [label]='"confirm Password"' [type]='"password"'>
+    </app-text-input>
+     <app-text-input [formControl]='registerform.controls["KnownAs"]' [label]='"Known As"' >
+
+      </app-text-input>
+    
+    <app-text-input [formControl]='registerform.controls["dateofBirth"]' [label]='"Date of Birth"' >
+
+      </app-text-input>
+     <app-text-input [formControl]='registerform.controls["city"]' [label]='"City"' >
+
+      </app-text-input>
+     <app-text-input [formControl]='registerform.controls["country"]' [label]='"Country"' >
+
+      </app-text-input> 
+     
+     
     <!-- <div class="form-group">
-       <label>Who is your favourite user?</label>
-       <select class="form-control">
-           <option *ngFor="let user of usersFromHomeComponent" [value]="user.userName">
-               {{user.userName}}
-           </option>
-       </select>
+        <input 
+        [class.is-invalid]='registerform.get("password").errors 
+        && registerform.get("password").touched'
+        type="password" 
+        class="form-control" 
+        formControlName='password' 
+        placeholder="Password" >
+        <div *ngIf="registerform.get('password').hasError('required')" 
+        class="invalid-feedback">Please provide password</div>
+        <div *ngIf="registerform.get('password').hasError('minlength')" 
+        class="invalid-feedback">password length must be at least 4 characters</div>
+        <div *ngIf="registerform.get('password').hasError('maxlength')" 
+        class="invalid-feedback">password length must be at most 8 characters</div>
     </div> -->
-    <div>
-        <input type="text" class="form-control" name="password" 
-        [(ngModel)]="model.password" placeholder="password">
-    </div>
-
+   
     <div class="form-group text-center">
         <button  class="btn btn-dark mr-2" type="submit">Register</button>
     
         <button  class="btn btn-info mr-2" (click)="cancel()" type="submit">Cancel</button>
     </div>
 </form>
+
+<p>Form value: {{registerform.value | json}}</p>
+<p>Form value: {{registerform.status | json}}</p> 
